--- a/Random_Forest/Random_Forest.vcxproj
+++ b/Random_Forest/Random_Forest.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="HOG_Descriptor.cpp" />
     <ClCompile Include="hog_visualization.cpp" />
+    <ClCompile Include="Object_classification.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hog_visualization.h" />
