--- a/Random_Forest/Random_Forest.vcxproj.filters
+++ b/Random_Forest/Random_Forest.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="hog_visualization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Object_classification.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hog_visualization.h">
